fix(sidebar): Fix task assignee overflow (#768)

--- a/src/components/ContentSidebar/ActivityFeed/approval-comment-form/ApprovalCommentForm.scss
+++ b/src/components/ContentSidebar/ActivityFeed/approval-comment-form/ApprovalCommentForm.scss
@@ -113,6 +113,8 @@
             width: 100%;
 
             .pill-selector-input-wrapper {
+                max-height: 75px;
+                overflow: auto;
                 width: auto;
             }
         }
